FIX: alignment and space and update JSOn file

--- a/src/components/home/blogCard/styles.scss
+++ b/src/components/home/blogCard/styles.scss
@@ -9,7 +9,7 @@
 
   @include mobile {
     border: none;
-    margin: 50px -30px 0;
+    margin: 50px -30px 50px;
   }
 
   .grid-layout {
@@ -27,17 +27,19 @@
   }
 
   .box-style {
-    position: relative;
-    padding-top: 28px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-top: 28px;
+    position: relative;
+    padding: 28px 15px 0;
+    height: 100%;
 
     @include mobile {
       max-width: 91%;
     }
 
-    &::before {
+    &::after {
       position: absolute;
       top: 0;
       left: 25px;
@@ -58,8 +60,9 @@
     height: 190px;
     width: 100%;
     position: relative;
-    overflow: hidden;
     border-radius: 4px;
+    overflow: hidden;
+    // z-index: 1;
 
     img {
       position: absolute;
@@ -79,9 +82,11 @@
     font-weight: 600;
     margin-top: 30px;
     max-width: 80%;
+    color: $theme-secondary;
 
     @include mobile {
       font-size: 20px;
+      max-width: 90%;
     }
   }
 
@@ -96,12 +101,6 @@
   .read-more-link {
     font-size: 18px;
     color: $theme-secondary;
-    margin-top: 30px;
     display: block;
-    position: relative;
-
-    @include mobile {
-      margin-top: 20px;
-    }
   }
 }
