--- a/src/pages/blog/styles.scss
+++ b/src/pages/blog/styles.scss
@@ -141,11 +141,9 @@
     }
 
     .content-section {
-
       @include mobile {
         padding-top: 40px;
       }
-
 
       .border-section {
         position: relative;
@@ -258,8 +256,8 @@
 
         @include mobile {
           margin-bottom: 0;
-          padding: 50px 20px 30px;
-          max-width: 90%;
+          padding: 30px 15px 30px;
+          max-width: 100%;
           font-size: 20px;
         }
       }
@@ -305,16 +303,24 @@
     }
 
     .content-section {
-      padding: 50px 25px;
+      padding: 50px 45px;
+
+      @include mobile {
+        padding: 50px 20px;
+      }
     }
 
     .blog-thumb-image {
       width: 100%;
-      height: 200px;
+      height: 250px;
       position: relative;
       overflow: hidden;
       margin-right: 28px;
-      border-radius: 4px;
+      border-radius: 8px;
+
+      @include mobile {
+        height: 200px;
+      }
 
       img {
         position: absolute;
@@ -324,10 +330,6 @@
         height: 100%;
         object-fit: cover;
       }
-    }
-
-    .empty-space {
-
     }
 
     .blog-content-item {
@@ -348,12 +350,12 @@
       }
 
       .description {
-        font-size: 18px;
-        line-height: 25px;
+        font-size: 20px;
+        line-height: 30px;
         letter-spacing: -1px;
-        max-width: 80%;
+        max-width: 90%;
         display: -webkit-box;
-        -webkit-line-clamp: 3;
+        -webkit-line-clamp: 4;
         -webkit-box-orient: vertical;  
         overflow: hidden;
         margin-top: 15px;
