--- a/src/pages/blogDetail/styles.scss
+++ b/src/pages/blogDetail/styles.scss
@@ -5,33 +5,70 @@
 .blog-detail-section {
   background-color: #F7F1E5;
   min-height: 100vh;
-  background-image: linear-gradient(to bottom, $theme-secondary 550px, transparent 20%);
-  padding: 50px 0;
 
   .title2 {
     font-size: 40px;
     color: $white;
+
+    @include mobile {
+      font-size: 35px;
+    }
   }
 
-  .img-round {
-    border-radius: 15px;
-    overflow: hidden;
-    margin: 30px 0;
+  // .img-round {
+  //   border-radius: 15px;
+  //   overflow: hidden;
+  //   margin: 30px 0;
+  //   height: 400px;
+  //   position: relative;
 
-    .img-blog {
+  //   .img-blog {
+  //     width: 100%;
+  //     position: absolute;
+  //     height: 100%;
+  //     width: 100%;
+  //     object-fit: contain;
+  //   }
+  // }
+
+  .header-style {
+    height: 400px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    background-attachment: fixed;
+
+    &::after {
+      position: absolute;
+      top: 0;
+      left: 0px;
       width: 100%;
+      height: 100%;
+      content: '';
+      background-color: rgba($black, 0.8);
     }
   }
 
   .blog-layout {
     max-width: 1200px;
     margin: 0 auto;
+    position: relative;
+    z-index: 1;
+
+    @include mobile {
+      padding: 0 20px;
+    }
   }
 
   .description {
-    padding: 20px 0px;
+    padding: 80px 0px;
     font-size: 16px;
     margin: 0;
+
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   .btn-back {
