--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -205,7 +205,7 @@
               padding: 0 10px;
               background: -webkit-linear-gradient(top, rgba($theme-primary-dark, 1) 30px, rgba(#c95632, 1));
               @include clip-text;
-            }            
+            }
           }
         }
 
@@ -327,7 +327,8 @@
         }
       }
 
-      .icon1, .icon3 {
+      .icon1,
+      .icon3 {
         margin-left: -15px;
       }
 
@@ -383,6 +384,22 @@
       a {
         color: $white;
       }
+    }
+
+    .gameJson {
+      width: 75%;
+
+      @include mobile {
+        margin-left: 30px;
+        margin-right: auto;
+      }
+    }
+
+    .game-json-sec {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px 0;
     }
 
     .img-center {
@@ -650,13 +667,20 @@
         border-top: 1px solid rgba($white, 0.3);
         padding-top: 30px;
         height: auto;
-        padding: 20px 5px;
+        padding: 20px 0px;
       }
 
       .jsonSpider {
         position: relative;
         left: 10px;
         transform: scale(1.1);
+
+        @include mobile {
+          transform: scale(1);
+          left: 0;
+          padding: 30px 0;
+          border-bottom: 1px solid rgba($white, 0.3);
+        }
       }
 
       video {
@@ -685,7 +709,6 @@
         height: auto;
       }
 
-
       .profile-box-style {
         display: flex;
         align-items: center;
@@ -712,6 +735,10 @@
 
         .text-sec {
           width: 80%;
+
+          @include mobile {
+            width: 95%;
+          }
         }
 
         .title4 {
@@ -982,6 +1009,7 @@
       position: relative;
       top: 30px;
       padding-top: 50px;
+      padding-right: 10px;
 
       @include mobile {
         flex-direction: column;
