--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -278,3 +278,43 @@ p {
     justify-content: flex-start;
   }
 }
+
+.blog-card {
+   // slick-dots-bottom
+   .slick-dots-bottom {
+
+    @include mobile {
+      bottom: -50px; 
+    }
+
+    li {
+      width: 10px !important;
+      height: 10px !important;
+      border-radius: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+
+      button {
+        background: none;
+        height: 10px;
+        width: 10px;
+        background: #2F1601;
+      }
+    }
+  }
+
+  .slick-active {
+
+    button {
+      width: 10px;
+      background: #2F1601 !important;
+    }
+  }
+
+  .slick-dots {
+    margin-left: 15px;
+    justify-content: flex-start;
+  }
+}
